# nexus_data_s3

./: .dockerignore  .env.example  .gitignore  Jenkinsfile  QUICKSTART.md  README.md  backend.json  docker-compose.yml  frontend.json
.claude/: settings.local.json
backend/: .coveragerc  .env.example  Dockerfile  FILE_TREE.txt  QUICK_START.md  add_session_id_migration.py  alembic.ini  check_table_structure.py  create_database.sql  create_tables.py  fix_chat_history_schema.py  pytest.ini  quick_test.py  requirements.txt  setup_database.py  test_connectors.py  test_google_workspace.py
backend/alembic/: env.py
backend/app/: __init__.py  init_db.py  main.py
backend/migrations/: add_multi_tenant_support.sql  migrate_to_password_auth.sql
backend/tests/: README.md  TEST_REPORT.md  __init__.py  all_connectors_conversation_test.py  business_conversation_test.py  comprehensive_boss_test.py  comprehensive_connector_test.py  comprehensive_pm_test.py  comprehensive_test_suite.py  conftest.py  full_test_report.json  full_test_suite.py  quick_test.py  (+11 more)
connectors/slack/: pyproject.toml  requirements.txt
connectors/slack/src/: slack_server.py
docs/: Architecture_Doc_To_Richard.txt  DEPLOYMENT.md  DEVELOPER_HANDOFF.md  ENTERPRISE_SSO_DESIGN.md  INCIDENT_RESPONSE.md  RUNBOOK.md  SECURITY_CHECKLIST.md  Santosh_Review.md  Technical_Architecture.md
frontend/: .dockerignore  .env.example  Dockerfile  FIXES_APPLIED.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: build  deploy-backend  deploy-frontend
(+152 files in other folders)
